--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link
 			rel="stylesheet"
-			href="https://bootswatch.com/4/flatly/bootstrap.min.css"
+			href="https://bootswatch.com/4/materia/bootstrap.min.css"
 		/>
 
 		<title>Super PC Consulting</title>
